# regwatch

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yaml
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  server.py  setup.cfg
api/app/: app_ctx.py  main.py
api/app/auth/: depends.py
api/app/core/: contexts.py  exceptions.py  loggers.py  schemas.py  settings.py  signals.py  utils.py
api/app/core/clients/: auth0.py  http.py
api/app/db/pg/: base.py  constants.py
api/app/services/: alerts.py  jurisdictions.py  obligations.py  organizations.py  pages.py  sources.py  users.py
api/app/services/classifier/: exceptions.py  models.py  prompts.py  service.py  settings.py
api/app/services/crawler/: exceptions.py  fetcher.py  models.py  service.py  settings.py
api/app/taskiq/: broker.py  models.py
api/migrations/: env.py
api/migrations/versions/: 2025-08-20_0dff8782d535_initial_migration.py  2025-08-26_4eb409ecf783_add_obligations_source_foreign_key.py  2025-09-02_d08a855099d2_update_obligations_and_alerts_tables.py  2025-09-04_e735fddc65ed_update_monitored_pages_table.py  2025-10-17_d0a99925f3c9_add_indexes_for_search.py  2025-11-18_61c646d81ba6_delete_task_logs_table.py  2025-11-18_create_taskiq_schema.py  2025-11-19_dafd9f1fcdc1_add_last_monitoring_scheduled_at_column_.py
api/scripts/: extract_yaml_env.py  setup_organization.py
api/src/: __init__.py  classifier.py  config.py  crawler.py  models.py  utils.py
ui/: .dockerignore  README.md  (+14 more)
(+449 files in other folders)
