[tool.poetry]
name = "regwatch"
version = "0.0.1"
description = "Service to"
authors = ["Dynamiq Team <hello@getdynamiq.ai>"]
repository = "https://github.com/dynamiq-ai/regwatch-api"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dynamiq = "0.23.0"
fastapi = "0.115.12"
fastapi-pagination = "0.13.3"
fastapi-filter = "2.0.1"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
asyncpg = "0.30.0"
sqlalchemy = {version = "2.0.42", extras = ["asyncio"]}
alembic = "1.16.4"
python-multipart = "0.0.18"
uvicorn = {version = "0.34.2", extras = ["standard"]}
aioboto3 = "13.1.1"
pyopenssl = "24.3.0"
cachetools = "5.5.2"
orjson = "3.10.18"
psutil = "7.0.0"
furl = "2.1.3"
sentry-sdk = "2.32.0"
taskiq = "0.11.18"
taskiq-redis = "1.0.9"
taskiq-postgres = {extras = ["asyncpg"], version = "^0.6.0"}
httpx = "0.27.0"
redis = "5.0.8"
email-validator = "2.2.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "~3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
line_length = 120
